--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -49,7 +49,7 @@ img {
 	background: var(--color-gradient);
 }
 
-@media screen and (max-width: 1080px) {
+@media screen and (max-width: 480px) {
 	.smf__Navbar-containers {
 		display: none;
 	}
